# Team19-Phase2

./: Makefile  PLATFORM_SUPPORT.md  README.md  pyproject.toml  run  urls.txt
.github/workflows/: cd.yml  ci.yml
acmecli/: determinism.py  io_utils.py  llm_analysis.py  llm_providers.py  logging_cfg.py  main.py  report.py  requirments.txt  scoring.py  service.py  urls.py
acmecli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
acmecli/baseline/: backend.py  cost.py  download.py  endpoints_delete.py  endpoints_ingest.py  endpoints_license.py  endpoints_lineage.py  endpoints_list.py  endpoints_reset2.py  endpoints_search.py  endpoints_stubs.py  mockdb.py  modeldb.py  rate.py  reset.py  search.py  seed_demo_model.py  streamlit_ui.py  tracks.py  upload.py
acmecli/metrics/: base.py  hf_api.py  repo_scan.py  test_dataset_metric.py
test_artifacts/: custom_summary.txt  empty_results_summary.txt  evaluation_20251030_121851.jsonl  evaluation_20251030_121851_summary.txt  evaluation_20251030_121852.jsonl  evaluation_20251030_121852_summary.txt  invalid.jsonl  results.jsonl  results_summary.txt  test_analysis_20251030_121851.jsonl  urls.txt  with_empty_lines.jsonl
tests/: test_hf_api.py  test_io_utils.py  test_llm_analysis.py  test_llm_coverage.py  test_logging_cfg.py  test_main_cli.py  test_main_coverage.py  test_repo_scan_edges.py  test_report.py  test_report_coverage.py  test_scoring.py  test_smoke.py  test_urls.py
