[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["test_artifacts*"]

[project]
name = "acmecli"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
  "requests>=2.32.0",
  "tqdm>=4.66.0",
  "orjson>=3.10.0",
  "flask>=2.0.0",
  "flask-cors>=4.0.0",
  "boto3>=1.26.0",
  "streamlit>=1.39.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "coverage[toml]>=7.6",
  "flake8>=7.0",
  "isort>=5.13",
  "mypy>=1.10",
  "types-requests",
  "black>=24.0",
  "pre-commit>=3.5"
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.coverage.run]
branch = true
source = ["acmecli"]

[tool.coverage.report]
fail_under = 0
show_missing = true

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
